# fastapi-starter

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: backend.yml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/auth/: auth_handlers.py
app/routers/: auth.py
app/services/: user.py
tests/: test_auth.py  test_user.py
